--- a/CrisAllwomenFirstBlog.html
+++ b/CrisAllwomenFirstBlog.html
@@ -10,7 +10,7 @@
         @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300&display=swap');
 
         body {
-            background-color: #c5c28f color: #d2691e font-family: 'Josefin Sans', sans-serif;
+            background-color: #c5c28f; color: #d2691e; font-family: 'Josefin Sans', sans-serif;
             padding: 20px;
         }
     </style>
